# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.456 2005/12/14 15:04:22 rocket Exp $

  14 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Add envscript warning to aid users who may not know what they are doing

  13 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/generic_stage_template.spec:
  Changed example specs to match that cflags/cxxflags/chost/ldflags are now
  only configurable when building a stage2 tarball, to match the current state
  of portage. This is 2.0_rc9.

  13 Dec 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  Silence more of portages beeps and clicks and whistles

  13 Dec 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  Change the portage emerge to use run_emerge

  13 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/snapshot_target.py,
  modules/stage1_target.py, modules/stage2_target.py,
  modules/stage3_target.py:
  allow portdir_overlay to be part of all specs not including snapshot spec.
  Add warnings for stage1,2 and 3 in case someone uses this feature there.
  Remove overlay support from the snapshot spec but added a warning.

  13 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
  modules/stage2_target.py:
  Move allowable cflags/cxxflags/chost/ldflags changing to stage2 from stage1
  where it is allowed

  11 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
  Add support for bootloader softlevel=; have rsync delete the extra files out
  of the overlay so that the overlay always matches the source dir

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Swapped -v/-V since I had gotten them wrong here.

  09 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix stupid overlay bug
