@@ -1,5 +1,12 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.456 2005/12/14 15:04:22 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.457 2005/12/16 14:42:07 rocket Exp $
+
+  16 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
+  modules/stage1_target.py, modules/stage2_target.py,
+  modules/stage3_target.py, modules/stage4_target.py:
+  Fix warning message in stage1,2 and 3. Fix tab spacing issues in various
+  other files
 
   14 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
